syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

message Role {
    // @inject_tag: bson:"_id"
    string ID = 1;
    // @inject_tag: bson:"name"
    string Name = 2;
    // @inject_tag: bson:"description"
    string Description = 3;
    // @inject_tag: bson:"group"
    string Group = 4;
    // @inject_tag: bson:"createdby"
    string CreatedBy = 5;
    // @inject_tag: bson:"createdat"
    google.protobuf.Timestamp CreatedAt = 6;
    // @inject_tag: bson:"modifiedby"
    string ModifiedBy = 7;
    // @inject_tag: bson:"modifiedat"
    google.protobuf.Timestamp ModifiedAt = 8;
}

message RoleListReq {
    // do not filter
}

message RoleListRes {
    // return a collection of Roles
    repeated Role Roles = 1;
}

message RoleCreateReq {
    // create a Role
    string Name = 1;
    string Description = 2;
    string Group = 3;
    string CreatedBy = 4;
}

message RoleCreateRes {
    // reutrn an id
    string ID = 1;
}

message RoleReadReq {
    // read a Role by id
    string ID = 1;
}

message RoleReadRes {
    // return a Role
    Role Role = 1;
}

message RoleReadByNameReq {
    // read a Role by id
    string Name = 1;
}

message RoleReadByNameRes {
    // return a Role
    Role Role = 1;
}

message RoleUpdateReq {
    // update a Role by id
    string ID = 1;
    string Name = 2;
    string Description = 3;
    string Group = 4;
    string ModifiedBy = 5;
}

message RoleUpdateRes {
    // return number of Roles updated
    // should equal 1 on success
    int64 Updated = 1;
}

message RoleDeleteReq {
    // delete a Role by id
    string ID = 1;
}

message RoleDeleteRes {
    // return number of Roles deleted
    // should equal 1 on success
    int64 Deleted = 1;
}

service RoleService {
    rpc List(RoleListReq) returns (RoleListRes);
    rpc Create(RoleCreateReq) returns (RoleCreateRes);
    rpc Read(RoleReadReq) returns (RoleReadRes);
    rpc ReadByName(RoleReadByNameReq) returns (RoleReadByNameRes);
    rpc Update(RoleUpdateReq) returns (RoleUpdateRes);
    rpc Delete(RoleDeleteReq) returns (RoleDeleteRes);
}
